# Rust-Leaderboard-API

./: .env  Cargo.toml  LICENSE  README.md  cert.pem  key.pem
src/: auth.rs  error.rs  main.rs  models.rs  routes.rs  services.rs  state.rs
