[package]
name = "leaderboard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
futures = "0.3.28"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
derive_more = "0.99"
dotenvy = "0.15"
