[package]
name = "leaderboard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.0", features = ["rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
futures = "0.3.28"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
derive_more = "0.99"
dotenvy = "0.15"
actix-web-httpauth = "0.7.0" # For JWT authentication
argonautica = "0.2.0" # For password hashing
hmac = "0.12.1" 
jwt = "0.16.0"
sha2 = "0.10.6"
rustls = "0.20"
rustls-pemfile = "1.0"